doctor homepage moved to react - no navbars

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,31 @@
+attrs==21.4.0
+autopep8==2.0.1
+Babel==2.11.0
+blinker==1.5
+certifi==2022.12.7
 click==8.0.1
+cloudinary==1.32.0
+exceptiongroup==1.1.0
 Flask==2.0.1
+Flask-DebugToolbar==0.11.0
 Flask-SQLAlchemy==2.5.1
+geographiclib==2.0
+geopy==2.3.0
 greenlet==1.1.0
+iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+packaging==21.3
+pluggy==1.0.0
 psycopg2-binary==2.9.3
+py==1.11.0
+pycodestyle==2.10.0
+pyparsing==3.0.8
+pytest==7.1.2
+pytz==2022.7.1
+six==1.16.0
 SQLAlchemy==1.4.18
+tomli==2.0.1
+urllib3==1.26.14
 Werkzeug==2.0.1
-Flask-DebugToolbar==0.11.0
-geopy==2.3.0
