--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 attrs==21.4.0
 autopep8==2.0.1
 Babel==2.11.0
 blinker==1.5
 certifi==2022.12.7
+cffi==1.15.1
 click==8.0.1
 cloudinary==1.32.0
 exceptiongroup==1.1.0
@@ -21,6 +24,7 @@ pluggy==1.0.0
 psycopg2-binary==2.9.3
 py==1.11.0
 pycodestyle==2.10.0
+pycparser==2.21
 pyparsing==3.0.8
 pytest==7.1.2
 pytz==2022.7.1
