--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,71 @@
+altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/altgraph-0.17.2-py2.py3-none-any.whl
+appnope==0.1.3
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
+astroid==2.13.3
+asttokens==2.2.1
 attrs==21.4.0
 autopep8==2.0.1
 Babel==2.11.0
+backcall==0.2.0
 blinker==1.5
 certifi==2022.12.7
 cffi==1.15.1
 click==8.0.1
 cloudinary==1.32.0
+decorator==5.1.1
+dill==0.3.6
+distlib==0.3.6
 exceptiongroup==1.1.0
+executing==1.2.0
+filelock==3.9.0
 Flask==2.0.1
 Flask-DebugToolbar==0.11.0
 Flask-SQLAlchemy==2.5.1
+future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/future-0.18.2-py3-none-any.whl
 geographiclib==2.0
 geopy==2.3.0
 greenlet==1.1.0
+importlib-metadata==6.0.0
 iniconfig==1.1.1
+ipython==8.8.0
+isort==5.11.4
 itsdangerous==2.0.1
+jedi==0.18.2
 Jinja2==3.0.1
+lazy-object-proxy==1.9.0
+macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/macholib-1.15.2-py2.py3-none-any.whl
 MarkupSafe==2.0.1
+matplotlib-inline==0.1.6
+mccabe==0.7.0
 packaging==21.3
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==2.6.2
 pluggy==1.0.0
+prompt-toolkit==3.0.36
 psycopg2-binary==2.9.3
+ptyprocess==0.7.0
+pure-eval==0.2.2
 py==1.11.0
 pycodestyle==2.10.0
 pycparser==2.21
+Pygments==2.14.0
+pylint==2.15.10
 pyparsing==3.0.8
 pytest==7.1.2
 pytz==2022.7.1
 six==1.16.0
 SQLAlchemy==1.4.18
+stack-data==0.6.2
 tomli==2.0.1
+tomlkit==0.11.6
+traitlets==5.8.1
+typing_extensions==4.4.0
 urllib3==1.26.14
+virtualenv==20.17.1
+wcwidth==0.2.6
 Werkzeug==2.0.1
+wrapt==1.14.1
+zipp==3.11.0
